--- a/index.html
+++ b/index.html
@@ -3,19 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>反叛！挣脱框架</title>
+    <title>叛逆宣言</title>
+    <!-- 引入外部CSS文件 -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <div class="background"></div>
+    
     <div class="container">
-        <div class="frame" id="frame">
-            <p class="message" id="message">Ta 们 说 你的“价值” 就是赚钱！</p>
-            <p class="message">成为社会的“工具”！</p>
-            <p class="message">But I say no！</p>
-            <button id="escapeBtn">挣脱框架！</button>
-        </div>
+        <h1 class="dynamic-text">他们说你的“价值”就是赚钱！</h1>
+        <p class="dynamic-text">他们说成为社会的“工具”，或者走上固定模式！</p>
+        <p class="dynamic-text">But I say no！挣脱“框架”的压迫感！</p>
+        <p class="dynamic-text">有一天，我告诉你，我的人生属于我自己！</p>
+        <p class="dynamic-text">NOT ONLY FOR MONEY！</p>
+        <button class="button" onclick="showModal()">了解更多叛逆宣言</button>
     </div>
-    <div id="particles"></div>
+
+    <!-- 弹窗内容 -->
+    <div class="modal" id="modal">
+        <span class="close" onclick="closeModal()">×</span>
+        <h2>叛逆宣言</h2>
+        <p>我们的价值不仅仅体现在赚钱上，更在于我们能自由选择自己的生活方式，去追求梦想和创造意义！</p>
+        <p>我们拒绝被任何框架束缚，我们拒绝一成不变的模式，坚信每个人都应该为自己的自由而活！</p>
+    </div>
+
+    <!-- 引入外部JS文件 -->
     <script src="script.js"></script>
+
 </body>
 </html>
